registered the blueprint

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -39,30 +39,13 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Behavioral Questions</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">
-          Genres
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="/anime-most-popular">Most Popular</a>
-          <a class="dropdown-item" href="/anime/highest-rated">Highest Rated</a>
-            <a class="dropdown-item" href="/analytics">Analytics</a>
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Adventure</a>
-          <a class="dropdown-item" href="#">Comedy</a>
-          <a class="dropdown-item" href="#">Drama</a>
-          <a class="dropdown-item" href="#">Ecchi</a>
-          <a class="dropdown-item" href="#">Fantasy</a>
-          <a class="dropdown-item" href="#">Horror</a>
-          <a class="dropdown-item" href="#">Mystery</a>
-          <a class="dropdown-item" href="#">Romance</a>
-          <a class="dropdown-item" href="#">Sci-Fi</a>
-        </div>
+  </div>
       </li>
     </ul>
   </div>
 </nav>
+
+<img src="/static/images/aizir.jpeg" height="300" width="300">
 
 
     <!-- Remove the container if you want to extend the Footer to full width. -->
