added GIFs to footer

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -45,8 +45,7 @@
   </div>
 </nav>
 
-<img src="/static/images/aizir.jpeg" height="300" width="300">
-
+<!--<img src="{{ url_for('static', filename='images/student_studying.png') }}" height="300" width="300">-->
 
     <!-- Remove the container if you want to extend the Footer to full width. -->
 <div class="container my-5">
@@ -60,13 +59,12 @@
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 
           <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
-            <img src="https://gifdb.com/images/high/galaxy-gurren-lagann-simon-awl6r99ut5srfu7b.gif" height="120" alt=""
-                 loading="lazy" />
+            <iframe src="https://giphy.com/embed/fhAwk4DnqNgw8" width="480" height="259" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/life-school-college-fhAwk4DnqNgw8"></a></p>
           </div>
 
-          <p class="text-center">Anime recommendation system made to get you to watch YOUR anime</p>
+          <p class="text-center">Done studying? Then, check out some of this information!</p>
             <br>
-          <p>Connect with my on my socials!</p>
+          <p>Connect with me on my socials!</p>
 
           <ul class="list-unstyled d-flex flex-row justify-content-center">
             <li>
@@ -182,8 +180,12 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2020 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      © 2024 Copyright: Imir Ransom
+      <br>
+      Footer by
+      <a class="text-blue" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+
+
     </div>
     <!-- Copyright -->
   </footer>
