adding cards on the homepage

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -39,12 +39,41 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Behavioral Questions</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Technical Questions</a>
+      </li>
   </div>
       </li>
     </ul>
   </div>
 </nav>
+<div class="container my-5">
+  <div  align="center">
+     <h1
+       class="text-center Display-3 font-weight-bolder">Inter-Prep!
+       <br>
+       <h3>
+         This will house a bunch of interview questions to help prepare me for my interview! To help me prepare, please
+         select one of the three options.
+       </h3>
+     </h1>
+  </div>
+</div>
+</div>
+<div class="container my-5">
+  <div class="col-lg-3 col-md-6 mb-4 mb-md-0" align="center">
+    <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  </div>
+</div>
 
+<!--<iframe src="https://giphy.com/embed/cT5gKT412jHqw" width="480" height="269" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/work-online-home-cT5gKT412jHqw">via GIPHY</a></p>-->
 <!--<img src="{{ url_for('static', filename='images/student_studying.png') }}" height="300" width="300">-->
 
     <!-- Remove the container if you want to extend the Footer to full width. -->
@@ -59,7 +88,9 @@
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 
           <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
-            <iframe src="https://giphy.com/embed/fhAwk4DnqNgw8" width="480" height="259" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/life-school-college-fhAwk4DnqNgw8"></a></p>
+            <iframe src="https://giphy.com/embed/fhAwk4DnqNgw8" width="480" height="259" style="" frameBorder="0"
+                    class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto giphy-embed"
+                    allowFullScreen></iframe><p><a href="https://giphy.com/gifs/life-school-college-fhAwk4DnqNgw8"></a></p>
           </div>
 
           <p class="text-center">Done studying? Then, check out some of this information!</p>
@@ -88,47 +119,8 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0" align="left">
-          <h5 class="text-uppercase mb-4 font-weight-bolder">Genres</h5>
+        <div class="col-lg-1 col-md-6 mb-4 mb-md-0" align="left">
 
-          <ul class="list-unstyled">
-            <li class="mb-2">
-              <a href="/anime-most-popular" class="text-white"><i class="fa-solid fa-chart-line" style="color: purple"></i> Most Popular</a>
-            </li>
-            <li class="mb-2">
-              <a href="/anime/highest-rated" class="text-white"><i class="fa-solid fa-fire" style="color: orange"></i> Highest Rated</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-person-rifle" style="color: #5fec22"></i> Action</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-brands fa-space-awesome" style="color: red"></i> Adventure</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-masks-theater" style="color: magenta"></i> Comedy</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-person-harassing" style="color: blue"></i> Drama</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-face-grin-tongue-squint" style="color: hotpink"></i> Ecchi</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-dragon" style="color: green"></i> Fantasy</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-ghost" style="color: lightblue"></i> Horror</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-magnifying-glass" style="color: indigo"></i> Mystery</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-face-kiss-wink-heart" style="color: gold"></i> Romance</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-robot" style="color: silver"></i> Sci-Fi</a>
-            </li>
-          </ul>
         </div>
         <!--Grid column-->
 
@@ -141,16 +133,7 @@
               <a href="#!" class="text-white"><i class="fa-solid fa-book" style="color: brown"></i> General information</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-wand-sparkles" style="color: gold"></i> About anime</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-chart-column" style="color: blue"></i> Statistical data</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-briefcase" style="color: tan"></i> Job</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa-solid fa-address-book" style="color: yellow"></i> Contact</a>
+              <a href="#!" class="text-white"><i class="fa-solid fa-wand-sparkles" style="color: gold"></i> About me</a>
             </li>
           </ul>
         </div>
