cards are now added; need to be edited

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -47,6 +47,7 @@
     </ul>
   </div>
 </nav>
+
 <div class="container my-5">
   <div  align="center">
      <h1
@@ -60,18 +61,49 @@
   </div>
 </div>
 </div>
+
+
 <div class="container my-5">
-  <div class="col-lg-3 col-md-6 mb-4 mb-md-0" align="center">
-    <div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+  <div class="row my-4">
+    <!-- First card -->
+    <div class="col-sm-4">
+      <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
     </div>
-  </div>
+
+    <!-- Second card -->
+    <div class="col-sm-4">
+      <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Third card -->
+     <div class="col-sm-4">
+      <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
+
 
 <!--<iframe src="https://giphy.com/embed/cT5gKT412jHqw" width="480" height="269" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/work-online-home-cT5gKT412jHqw">via GIPHY</a></p>-->
 <!--<img src="{{ url_for('static', filename='images/student_studying.png') }}" height="300" width="300">-->
