added photos to the cards

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -66,37 +66,43 @@
 <div class="container my-5">
   <div class="row my-4">
     <!-- First card -->
-    <div class="col-sm-4">
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+    <div class="col-4">
+      <div class="card bg-dark text-center" style="width: 19rem;">
+        <img src="{{ url_for('static', filename='images/behavioral.png') }}" height="270" width="302">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div align="center">
+              <a href="#" class="btn btn-primary">Behavioral Questions</a>
+            </div>
         </div>
       </div>
     </div>
 
     <!-- Second card -->
-    <div class="col-sm-4">
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+    <div class="col-4">
+      <div class="card bg-dark text-center" style="width: 19rem;">
+        <img src="{{ url_for('static', filename='images/everything.jpg') }}" height="270" width="302">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div align="center">
+              <a href="#" class="btn btn-primary">All Questions</a>
+            </div>
         </div>
       </div>
     </div>
 
     <!-- Third card -->
-     <div class="col-sm-4">
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+     <div class="col-4">
+      <div class="card bg-dark text-center" style="width: 19rem;">
+        <img src="{{ url_for('static', filename='images/technical.jpg') }}" height="270" width="302">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">TECHNICAL</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div align="center">
+              <a href="#" class="btn btn-primary">Technical Questions</a>
+            </div>
         </div>
       </div>
     </div>
@@ -119,11 +125,12 @@
         <!--Grid column-->
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 
-          <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
-            <iframe src="https://giphy.com/embed/fhAwk4DnqNgw8" width="480" height="259" style="" frameBorder="0"
-                    class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto giphy-embed"
-                    allowFullScreen></iframe><p><a href="https://giphy.com/gifs/life-school-college-fhAwk4DnqNgw8"></a></p>
-          </div>
+<!--          <div
+                  class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">-->
+<!--          </div>-->
+          <iframe src="https://giphy.com/embed/fhAwk4DnqNgw8" width="300" height="162" style="" frameBorder="0"
+                  class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto giphy-embed"
+                  allowFullScreen></iframe><p><a href="https://giphy.com/gifs/life-school-college-fhAwk4DnqNgw8"></a></p>
 
           <p class="text-center">Done studying? Then, check out some of this information!</p>
             <br>
