--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -16,41 +16,41 @@
         body { background: #000000 !important;}
     </style>
 
-    <nav class="navbar navbar-light bg-light">
-  <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form>
+<!--Search Bar-->
+<!--    <nav class="navbar navbar-light bg-light">-->
+<!--  <form class="form-inline">-->
+<!--    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+<!--    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+<!--  </form>-->
 </nav>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navigation Hub</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#"><span style="font-family: sans-serif-melo">InterPrep Zone</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/anime">All Questions</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Behavioral Questions</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Technical Questions</a>
-      </li>
-  </div>
-      </li>
-    </ul>
+<!--    <ul class="navbar-nav">-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" href="/anime">All Questions</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" href="#">Behavioral Questions</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" href="#">Technical Questions</a>-->
+<!--      </li>-->
+<!--  </div>-->
+<!--      </li>-->
+<!--    </ul>-->
   </div>
 </nav>
 
-  <div class="col my-3">
-    <h3 class="Display-1 fst-italic">InterPrep</h3>
-  </div>
+<!--  <div class="col my-3">-->
+<!--    <h3 class="Display-1 fst-italic">InterPrep</h3>-->
+<!--  </div>-->
 <div class="container my-5">
   <div  align="center">
      <h1
@@ -114,8 +114,12 @@
     </div>
       <!-- Text (on the right) -->
   <div class="col-md-8 d-flex align-items-center">
-    <p class="text-center">
-        Focus entirely on the technical
+    <p style="font-family: sans-serif-menlo">
+        <span style="font-size: 20px">
+            When focusing on technical questions, you'll receive both the questions
+            and answers—perfect for studying and memorization. It’s like using digital flashcards, allowing
+            someone to quiz you without needing prior knowledge of the answers!
+        </span>
     </p>
   </div>
   </div>
