adding a few more touches to the home page

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -51,16 +51,17 @@
 <!--  <div class="col my-3">-->
 <!--    <h3 class="Display-1 fst-italic">InterPrep</h3>-->
 <!--  </div>-->
+<br><br><br>
 <div class="container my-5">
   <div  align="center">
      <h1
-       <p style="font-family: sans-serif-menlo"><span style="font-size: 50px">
+       <p style="font-family: sans-serif-menlo"><span style="font-size: 65px">
          This is where we put the <span style="font-style: italic">inter </span>in interview,
          and <span style="font-style: italic">prep</span> in preparation.</span></p>
       </h1>
-<br><br><br><br>
+<br><br><br><br><br><br><br><br>
 
-
+<!--Line Border-->
 <hr class="border border-primary border-3 opacity-75">
 
       <br>
