removed the borders on the cards

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -77,7 +77,7 @@
     <div class="row my-4">
   <!-- First card (on the left) -->
   <div class="col-md-4">
-    <div class="card bg-dark text-center" style="width: 19rem;">
+    <div class=" text-center" style="width: 19rem;">
       <img src="{{ url_for('static', filename='images/behavioral.png') }}" height="270" width="302" class="card-img-top" alt="Behavioral">
       <div class="card-body">
         <h5 class="card-title">BEHAVIORAL</h5>
@@ -102,7 +102,7 @@
  <!-- Second card -->
     <div class="row my-4">
      <div class="col-4">
-      <div class="card bg-dark text-center" style="width: 19rem;">
+      <div class="text-center" style="width: 19rem;">
         <img src="{{ url_for('static', filename='images/technical.jpg') }}" height="270" width="302">
         <div class="card-body">
           <h5 class="card-title">TECHNICAL</h5>
@@ -130,11 +130,13 @@
     <!-- Third card -->
     <div class="row my-4">
     <div class="col-4">
-      <div class="card bg-dark text-center" style="width: 19rem;">
-        <img src="{{ url_for('static', filename='images/everything.jpg') }}" height="270" width="302">
+      <div class="text-center" style="width: 19rem;">
+        <iframe src="https://giphy.com/embed/AO3giAtLPH4MIuugsB" width="302" height="400" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/snl-saturday-night-live-season-47-AO3giAtLPH4MIuugsB"></a></p>
         <div class="card-body">
           <h5 class="card-title">ALL QUESTIONS</h5>
-          <p class="card-text">Jump in and do both technical and behavioral!</p>
+         <p style="font-family: sans-serif-menlo">
+             <span style="font-size: 20px">Jump in and do both technical and behavioral!
+             </span></p>
             <div align="center">
               <a href="#" class="btn btn-primary">All Questions</a>
             </div>
@@ -143,8 +145,10 @@
     </div>
         <!-- Text (on the right) -->
   <div class="col-md-8 d-flex align-items-center">
-    <p class="text-center">
-        Or choose everything, everywhere, all at once
+    <p style="font-family: sans-serif-menlo">
+        <span style="font-size: 30px">
+            Or choose Everything, Everywhere, all at once!
+        </span>
     </p>
   </div>
 </div>
