added questions to techincal page

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}My Anime App{% endblock %}</title>
+    <title>{% block title %}My Interview Prep App{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous">
@@ -72,7 +72,7 @@
 
 
 <div class="container my-5">
-
+{% block content %}{% endblock %}
     <!-- First card -->
     <div class="row my-4">
   <!-- First card (on the left) -->
@@ -108,7 +108,7 @@
           <h5 class="card-title">TECHNICAL</h5>
           <p class="card-text">Get some practice with just the technical side of the interview</p>
             <div align="center">
-              <a href="#" class="btn btn-primary">Technical Questions</a>
+              <a href="/tech" class="btn btn-primary">Technical Questions</a>
             </div>
         </div>
       </div>
@@ -131,7 +131,9 @@
     <div class="row my-4">
     <div class="col-4">
       <div class="text-center" style="width: 19rem;">
-        <iframe src="https://giphy.com/embed/AO3giAtLPH4MIuugsB" width="302" height="400" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/snl-saturday-night-live-season-47-AO3giAtLPH4MIuugsB"></a></p>
+        <iframe src="https://giphy.com/embed/AO3giAtLPH4MIuugsB" width="302" height="400" style="" frameBorder="0"
+                class="giphy-embed" allowFullScreen></iframe><p>
+                <a href="https://giphy.com/gifs/snl-saturday-night-live-season-47-AO3giAtLPH4MIuugsB"></a></p>
         <div class="card-body">
           <h5 class="card-title">ALL QUESTIONS</h5>
          <p style="font-family: sans-serif-menlo">
