--- a/web/templates/tech.html
+++ b/web/templates/tech.html
@@ -1,16 +1,23 @@
 {% extends 'index.html' %}
 {% block title %}Technical Questions{% endblock %}
 
+{% block header %}Tech Questions{% endblock %}
+
 {% block content %}
 
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<!--    <a href="#" class="card-link">Card link</a>-->
-<!--    <a href="#" class="card-link">Another link</a>-->
+<div class="card text-center">
+  <div class="card-header">
+    Featured
   </div>
+  {% for question in questions %}
+  <div class="card-body">
+    <h5 class="card-title">{{question}}</h5>
+    <p class="card-text">{{answer}}</p>
+<!--    <a href="#" class="btn btn-primary">Go somewhere</a>-->
+  </div>
+<!--  <div class="card-footer text-body-secondary">-->
+<!--    2 days ago-->
+<!--  </div>-->
 </div>
-
-{% end block %}
+{% endfor %}
+{% endblock %}
