added questions to behavioral page

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -83,7 +83,7 @@
         <h5 class="card-title">BEHAVIORAL</h5>
         <p class="card-text">Practice only behavioral questions.</p>
         <div align="center">
-          <a href="#" class="btn btn-primary">Behavioral Questions</a>
+          <a href="behav" class="btn btn-primary">Behavioral Questions</a>
         </div>
       </div>
     </div>
